Add .png files to hamburger button in index.html and background-image in styles.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 </head>
 
 <body>
+    <header>
+        <div class="logo-container">
+            <h1>Welcome</h1>
+        </div>
+        <button><img src="icon-img/Icon - Menu.png" alt=""></button>
+    </header>
 
+    <!-- Main content starts here -->
+    <main></main>
 </body>
 
 </html>
