--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
     <title>Mathias Wismann</title>
 </head>
@@ -12,13 +17,33 @@
 <body>
     <header>
         <div class="logo-container">
-            <h1>Welcome</h1>
+            <h4>Welcome</h4>
         </div>
-        <button><img src="icon-img/Icon - Menu.png" alt=""></button>
+        <button id="hamburger"><img src="icon-img/Icon - Menu.png" alt=""></button>
     </header>
 
     <!-- Main content starts here -->
-    <main></main>
+    <main>
+        <section class="headline">
+            <div class="heading">
+                <h1>Hey there. I'm Mathias</h1>
+                <h2>I'm a software developer</h2>
+                <h3> I can help you build a product, feature or website. Look through some of my work and experience! If
+                    you like what you see and have a project you need coded,
+                    don't hesitate to contact me.</h3>
+            </div>
+
+            <ul>
+                <li><a href="https://twitter.com/mathias_wismann"><i class="lab la-twitter"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/math%C3%ADas-wismann-bertolucci-8812a4194/"><i
+                            class="lab la-linkedin-in"></i></a></li>
+                <li><a href="https://medium.com/"><i class="lab la-medium"></i></a></li>
+                <li><a href="https://github.com/mwismann"><i class="lab la-github"></i></a></li>
+            </ul>
+
+            <button class="action-btn"><i class="las la-angle-down"></i></button>
+        </section>
+    </main>
 </body>
 
 </html>
