Add .png for media links in index.html files and add styling to the heading section in styles.css file

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
     <title>Mathias Wismann</title>
 </head>
@@ -19,7 +17,7 @@
         <div class="logo-container">
             <h4>Welcome</h4>
         </div>
-        <button id="hamburger"><img src="icon-img/Icon - Menu.png" alt=""></button>
+        <button id="hamburger"><img src="icon-img/incon-menu.png" alt=""></button>
     </header>
 
     <!-- Main content starts here -->
@@ -34,11 +32,18 @@
             </div>
 
             <ul>
-                <li><a href="https://twitter.com/mathias_wismann"><i class="lab la-twitter"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/math%C3%ADas-wismann-bertolucci-8812a4194/"><i
-                            class="lab la-linkedin-in"></i></a></li>
-                <li><a href="https://medium.com/"><i class="lab la-medium"></i></a></li>
-                <li><a href="https://github.com/mwismann"><i class="lab la-github"></i></a></li>
+                <li class="media-link"><a href="https://twitter.com/mathias_wismann"><img src="icon-img/twitter.png"
+                            alt="twitter logo"></a></li>
+                <li class="media-link"><a
+                        href="https://www.linkedin.com/in/math%C3%ADas-wismann-bertolucci-8812a4194/"><img
+                            src="icon-img/linked-in.png" alt="linked-in logo"></a></li>
+                <li class="media-link"><a href="https://medium.com/"><img src="icon-img/medium.png"
+                            alt="medium logo"></a></li>
+                <li class="media-link"><a href="https://github.com/mwismann"><img src="icon-img/github.png"
+                            alt="github logo"></a></li>
+                <li class="media-link"><a href="https://github.com/mwismann"><img src="icon-img/angellist.png"
+                            alt="angellist logo"></a>
+                </li>
             </ul>
 
             <button class="action-btn"><i class="las la-angle-down"></i></button>
