Fix linters errors on index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="logo-container">
             <h4>Welcome</h4>
         </div>
-        <button id="hamburger"><img src="icon-img/incon-menu.png" alt=""></button>
+        <button type="button" id="hamburger"><img src="icon-img/incon-menu.png" alt=""></button>
     </header>
 
     <!-- Main content starts here -->
@@ -46,7 +46,7 @@
                 </li>
             </ul>
 
-            <button class="action-btn"><i class="las la-angle-down"></i></button>
+            <button type="button" class="action-btn"></button>
         </section>
     </main>
 </body>
