Add chevron img to action button and final clean up for styles.css

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                             alt="medium logo"></a></li>
                 <li class="media-link"><a href="https://github.com/mwismann"><img src="icon-img/github.png"
                             alt="github logo"></a></li>
-                <li class="media-link"><a href="https://github.com/mwismann"><img src="icon-img/angellist.png"
+                <li class="media-link"><a href="https://angel.co/"><img src="icon-img/angellist.png"
                             alt="angellist logo"></a>
                 </li>
             </ul>
 
-            <button type="button" class="action-btn"></button>
+            <button type="button" class="action-btn"><img src="icon-img/chevron-down.png" alt="chevron down action button"></button>
         </section>
     </main>
 </body>
