Add changes suggested by reviewer to index.html and styles.css files

--- a/index.html
+++ b/index.html
@@ -15,20 +15,21 @@
 <body>
     <header>
         <div class="logo-container">
-            <h4>Welcome</h4>
+            <a href="#">Welcome</a>
         </div>
-        <button type="button" id="hamburger"><img src="icon-img/incon-menu.png" alt=""></button>
+        <nav>
+            <button type="button" id="hamburger"><img src="icon-img/incon-menu.png" alt=""></button>
+        </nav>
     </header>
 
     <!-- Main content starts here -->
-    <main>
         <section class="headline">
             <div class="heading">
                 <h1>Hey there. I'm Mathias</h1>
                 <h2>I'm a software developer</h2>
-                <h3> I can help you build a product, feature or website. Look through some of my work and experience! If
+                <p> I can help you build a product, feature or website. Look through some of my work and experience! If
                     you like what you see and have a project you need coded,
-                    don't hesitate to contact me.</h3>
+                    don't hesitate to contact me.</p>
             </div>
 
             <ul>
@@ -48,7 +49,6 @@
 
             <button type="button" class="action-btn"><img src="icon-img/chevron-down.png" alt="chevron down action button"></button>
         </section>
-    </main>
 </body>
 
 </html>
