Replace .png media icons with .svg icons on both HTML and CSS files

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#">Welcome</a>
         </div>
         <nav>
-            <button type="button" id="hamburger"><img src="icon-img/incon-menu.png" alt=""></button>
+            <button type="button" id="hamburger"><img src="icon-img/hamburger.svg" alt=""></button>
         </nav>
     </header>
 
@@ -33,21 +33,21 @@
             </div>
 
             <ul>
-                <li class="media-link"><a href="https://twitter.com/mathias_wismann"><img src="icon-img/twitter.png"
+                <li><a class="media-link" href="https://twitter.com/mathias_wismann"><img src="icon-img/twitter.svg"
                             alt="twitter logo"></a></li>
-                <li class="media-link"><a
+                <li><a class="media-link"
                         href="https://www.linkedin.com/in/math%C3%ADas-wismann-bertolucci-8812a4194/"><img
-                            src="icon-img/linked-in.png" alt="linked-in logo"></a></li>
-                <li class="media-link"><a href="https://medium.com/"><img src="icon-img/medium.png"
+                            src="icon-img/linkedin-icon.svg" alt="linked-in logo"></a></li>
+                <li><a class="media-link" href="https://medium.com/"><img src="icon-img/medium.svg"
                             alt="medium logo"></a></li>
-                <li class="media-link"><a href="https://github.com/mwismann"><img src="icon-img/github.png"
+                <li><a class="media-link" href="https://github.com/mwismann"><img src="icon-img/github.svg"
                             alt="github logo"></a></li>
-                <li class="media-link"><a href="https://angel.co/"><img src="icon-img/angellist.png"
+                <li><a class="media-link" href="https://angel.co/"><img src="icon-img/angellist.svg"
                             alt="angellist logo"></a>
                 </li>
             </ul>
 
-            <button type="button" class="action-btn"><img src="icon-img/chevron-down.png" alt="chevron down action button"></button>
+            <button type="button" class="action-btn"><img src="icon-img/chevron-down.svg" alt="chevron down action button"></button>
         </section>
 </body>
 
