Add markup and semantic content to index.html + Add initial styling in styles.css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <!-- Main content starts here -->
-        <section class="headline">
+    <section class="headline">
             <div class="heading">
                 <h1>Hey there. I'm Mathias</h1>
                 <h2>I'm a software developer</h2>
@@ -47,8 +47,37 @@
                 </li>
             </ul>
 
-            <button type="button" class="action-btn"><img src="icon-img/chevron-down.svg" alt="chevron down action button"></button>
-        </section>
+            <button type="button" class="action-btn-sec"><img src="icon-img/chevron-down.svg" alt="chevron down action button"></button>
+    </section>
+
+    <!-- Works Section  -->
+    <section class="works-section">
+
+        <h2>My Recent Works</h2>
+        <img src="icon-img/indicator.svg" alt="horizontal line indicator">
+        
+        <div class="grid-container">
+            <div class="grid-card">
+                <div class="img-container"></div>
+                <div class="card-meta">
+                    <h3>Multi-Post Stories Gain + Glory</h3>
+                    <ul class="work-categories">
+                        <li>Ruby on rails</li>
+                        <li>css</li>
+                        <li>JavaScript</li>
+                        <li>html</li>
+                    </ul>
+
+                    <a href="#" class="action-btn">See Project</a>
+                </div>
+            </div>
+            <div class="grid-card">2</div>
+            <div class="grid-card">3</div>
+            <div class="grid-card">4</div>
+            <div class="grid-card">5</div>
+            <div class="grid-card">6</div>
+        </div>
+    </section>
 </body>
 
 </html>
