Applied mobile-first stling to CSS file

--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
         
         <div class="grid-container">
             <div class="grid-card">
-                <div class="img-container"></div>
                 <div class="card-meta">
                     <h3>Multi-Post Stories Gain + Glory</h3>
                     <ul class="work-categories">
@@ -71,11 +70,71 @@
                     <a href="#" class="action-btn">See Project</a>
                 </div>
             </div>
-            <div class="grid-card">2</div>
-            <div class="grid-card">3</div>
-            <div class="grid-card">4</div>
-            <div class="grid-card">5</div>
-            <div class="grid-card">6</div>
+            <div class="grid-card">
+                <div class="card-meta">
+                    <h3>Multi-Post Stories Gain + Glory</h3>
+                    <ul class="work-categories">
+                        <li>Ruby on rails</li>
+                        <li>css</li>
+                        <li>JavaScript</li>
+                        <li>html</li>
+                    </ul>
+
+                    <a href="#" class="action-btn">See Project</a>
+                </div>
+            </div>
+            <div class="grid-card">
+                <div class="card-meta">
+                    <h3>Multi-Post Stories Gain + Glory</h3>
+                    <ul class="work-categories">
+                        <li>Ruby on rails</li>
+                        <li>css</li>
+                        <li>JavaScript</li>
+                        <li>html</li>
+                    </ul>
+
+                    <a href="#" class="action-btn">See Project</a>
+                </div>
+            </div>
+            <div class="grid-card">
+                <div class="card-meta">
+                    <h3>Multi-Post Stories Gain + Glory</h3>
+                    <ul class="work-categories">
+                        <li>Ruby on rails</li>
+                        <li>css</li>
+                        <li>JavaScript</li>
+                        <li>html</li>
+                    </ul>
+
+                    <a href="#" class="action-btn">See Project</a>
+                </div>
+            </div>
+            <div class="grid-card">
+                <div class="card-meta">
+                    <h3>Multi-Post Stories Gain + Glory</h3>
+                    <ul class="work-categories">
+                        <li>Ruby on rails</li>
+                        <li>css</li>
+                        <li>JavaScript</li>
+                        <li>html</li>
+                    </ul>
+
+                    <a href="#" class="action-btn">See Project</a>
+                </div>
+            </div>
+            <div class="grid-card">
+                <div class="card-meta">
+                    <h3>Multi-Post Stories Gain + Glory</h3>
+                    <ul class="work-categories">
+                        <li>Ruby on rails</li>
+                        <li>css</li>
+                        <li>JavaScript</li>
+                        <li>html</li>
+                    </ul>
+
+                    <a href="#" class="action-btn">See Project</a>
+                </div>
+            </div>
         </div>
     </section>
 </body>
