Add initial markup and styles for About section in HTML and CSS files

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         <h2>My Recent Works</h2>
         <img src="icon-img/indicator.svg" alt="horizontal line indicator">
         
-        <div class="grid-container">
-            <div class="grid-card">
-                <div class="card-meta">
+        <div class="works-grid-container">
+            <div class="works-grid-card">
+                <div class="works-card-meta">
                     <h3>Multi-Post Stories Gain + Glory</h3>
                     <ul class="work-categories">
                         <li>Ruby on rails</li>
@@ -70,8 +70,8 @@
                     <a href="#" class="action-btn">See Project</a>
                 </div>
             </div>
-            <div class="grid-card">
-                <div class="card-meta">
+            <div class="works-grid-card">
+                <div class="works-card-meta">
                     <h3>Multi-Post Stories Gain + Glory</h3>
                     <ul class="work-categories">
                         <li>Ruby on rails</li>
@@ -83,8 +83,8 @@
                     <a href="#" class="action-btn">See Project</a>
                 </div>
             </div>
-            <div class="grid-card">
-                <div class="card-meta">
+            <div class="works-grid-card">
+                <div class="works-card-meta">
                     <h3>Multi-Post Stories Gain + Glory</h3>
                     <ul class="work-categories">
                         <li>Ruby on rails</li>
@@ -96,8 +96,8 @@
                     <a href="#" class="action-btn">See Project</a>
                 </div>
             </div>
-            <div class="grid-card">
-                <div class="card-meta">
+            <div class="works-grid-card">
+                <div class="works-card-meta">
                     <h3>Multi-Post Stories Gain + Glory</h3>
                     <ul class="work-categories">
                         <li>Ruby on rails</li>
@@ -109,8 +109,8 @@
                     <a href="#" class="action-btn">See Project</a>
                 </div>
             </div>
-            <div class="grid-card">
-                <div class="card-meta">
+            <div class="works-grid-card">
+                <div class="works-card-meta">
                     <h3>Multi-Post Stories Gain + Glory</h3>
                     <ul class="work-categories">
                         <li>Ruby on rails</li>
@@ -122,8 +122,8 @@
                     <a href="#" class="action-btn">See Project</a>
                 </div>
             </div>
-            <div class="grid-card">
-                <div class="card-meta">
+            <div class="works-grid-card">
+                <div class="works-card-meta">
                     <h3>Multi-Post Stories Gain + Glory</h3>
                     <ul class="work-categories">
                         <li>Ruby on rails</li>
@@ -136,6 +136,35 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- About Section -->
+    <section class="about-section">
+        <div class="about-bg-img-container">
+            <img class="about-bg-img-1" src="icon-img/illu-about-me-1.svg" alt="origami crane">
+            <img class="about-bg-img-2" src="icon-img/illu-about-me-2.svg" alt="origami crane">
+        </div>
+        <h2>About me</h2>
+        <p> I can help you build a product , feature or website. Look through some of my work and experience! If
+            you like what you see and have a project you need coded, 
+            don't hesitate to contact me.</p>
+        <a href="#" class="action-btn">Get My Resume</a>
+
+        <div class="about-grid-container">
+            <div class="about-grid-card">
+                <div class="about-img-container">
+                    <img src="icon-img/languages.svg" alt="planet-like icon">
+                </div>
+                <h3>Languages</h3>
+                <ul>
+                    <li>JavaScript</li>
+                    <li>Ruby</li>
+                    <li>Html</li>
+                    <li>Css</li>
+                </ul>
+            </div>
+        </div>
+        
     </section>
 </body>
 
