--- a/index.html
+++ b/index.html
@@ -156,11 +156,37 @@
                     <img src="icon-img/languages.svg" alt="planet-like icon">
                 </div>
                 <h3>Languages</h3>
-                <ul>
+                <ul class="about-categories">
                     <li>JavaScript</li>
                     <li>Ruby</li>
                     <li>Html</li>
-                    <li>Css</li>
+                    <li>CSS</li>
+                </ul>
+            </div>
+            <div class="about-grid-card">
+                <div class="about-img-container">
+                    <img src="icon-img/frameworks.svg" alt="planet-like icon">
+                </div>
+                <h3>Frameworks</h3>
+                <ul class="about-categories">
+                    <li>Bootstrap</li>
+                    <li>Ruby on rails</li>
+                    <li>RSpec</li>
+                    <li>Capybara</li>
+                    <li>Selenium</li>
+                </ul>
+            </div>
+            <div class="about-grid-card">
+                <div class="about-img-container">
+                    <img src="icon-img/skills.svg" alt="planet-like icon">
+                </div>
+                <h3>Skills</h3>
+                <ul class="about-categories">
+                    <li>Codekit</li>
+                    <li>GitHub</li>
+                    <li>Codepen</li>
+                    <li>Gitlab</li>
+                    <li>Terminal</li>
                 </ul>
             </div>
         </div>
