--- a/index.html
+++ b/index.html
@@ -192,6 +192,36 @@
         </div>
         
     </section>
+
+    <!-- Contact Section -->
+    <section class="contact-section">
+        <h2>I'm always interested in hearing about new projects, 
+            so if you'd like to chat please get in touch.</h2>
+        
+        <form action="/">
+            <input type="text" name="name" id="client-name" placeholder="Full name" required>
+            <input type="email" name="email" id="client-email" placeholder="Email address" required>
+            <textarea name="msg" id="client-msg" cols="30" rows="10" placeholder="Enter text here" required></textarea>
+            <button class="action-btn" type="submit">Get in touch</button>
+        </form>
+
+        <ul>
+            <li><a class="media-link" href="https://twitter.com/mathias_wismann"><img src="icon-img/twitter.svg"
+                        alt="twitter logo"></a></li>
+            <li><a class="media-link"
+                    href="https://www.linkedin.com/in/math%C3%ADas-wismann-bertolucci-8812a4194/"><img
+                        src="icon-img/linkedin-icon.svg" alt="linked-in logo"></a></li>
+            <li><a class="media-link" href="https://medium.com/"><img src="icon-img/medium.svg"
+                        alt="medium logo"></a></li>
+            <li><a class="media-link" href="https://github.com/mwismann"><img src="icon-img/github.svg"
+                        alt="github logo"></a></li>
+            <li><a class="media-link" href="https://angel.co/"><img src="icon-img/angellist.svg"
+                        alt="angellist logo"></a>
+            </li>
+        </ul>
+
+        <span>mwbertolucci@gmail.com</span>
+    </section>
 </body>
 
 </html>
