--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
         <h2>I'm always interested in hearing about new projects, 
             so if you'd like to chat please get in touch.</h2>
             
-        <form action="/" id="contact-form">
-            <input type="text" name="name" id="client-name" placeholder="Full name" required>
-            <input type="email" name="email" id="client-email" placeholder="Email address" required>
-            <textarea name="msg" id="client-msg" cols="30" rows="10" placeholder="Enter text here" required></textarea>
+        <form action="https://formspree.io/f/xknagbvo" method="post" id="contact-form">
+            <input type="text" name="name" id="client-name" maxlength="30" placeholder="Full Name" required>
+            <input type="email" name="email" id="client-email" placeholder="Email Address" required>
+            <textarea name="msg" id="client-msg" cols="30" rows="5" maxlength="500" placeholder="Leave a message" required></textarea>
             <button class="action-btn" type="submit">Get in touch</button>
         </form>
             
