Fix bug causing nav bar to overlap with contact section + Add active state bg-color to btn

--- a/index.html
+++ b/index.html
@@ -205,7 +205,9 @@
             <button class="action-btn" type="submit">Get in touch</button>
         </form>
             
-        <div class="contact-bg"></div>
+        <div class="contact-bg">
+            <img src="icon-img/contact-bg.svg" alt="">
+        </div>
             
         <ul>
             <li><a class="media-link" href="https://twitter.com/mathias_wismann"><img src="icon-img/twitter.svg"
