Add margin between social icons and last element of contact section

--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
         </ul>
 
         <span>mwbertolucci@gmail.com</span>
+
+        <img id="contact-line-break" src="icon-img/line-shape.svg" alt="">
     </section>
 </body>
 
