--- a/index.html
+++ b/index.html
@@ -151,6 +151,12 @@
                 <img class="about-bg-img-1" src="icon-img/illu-about-me-1.svg" alt="origami crane">
                 <img class="about-bg-img-2" src="icon-img/illu-about-me-2.svg" alt="origami crane">
             </div>
+
+            <div class="about-bg-img-cont-desktop">
+                <img id="about-desk-img-1" src="icon-img/desktop/illu-about-me-1-desktop.svg" alt="">
+                <img id="about-desk-img-2" src="icon-img/desktop/illu-about-me-2-desktop.svg" alt="">
+            </div>
+
             <h2>About me</h2>
             <p> I can help you build a product , feature or website. Look through some of my work and experience! If
                 you like what you see and have a project you need coded, 
@@ -202,7 +208,7 @@
 
     <!-- Contact Section -->
     <section id="contact-section">
-        <div class="container">
+        <div class="container alt-container">
             <h2>
                 I'm always interested in hearing about new projects, 
                 so if you'd like to chat please get in touch.
@@ -238,6 +244,24 @@
             <img id="contact-line-break" src="icon-img/line-shape.svg" alt="">
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+        <ul>
+            <li><a class="media-link foot" href="https://twitter.com/mathias_wismann"><img src="icon-img/twitter.svg"
+                        alt="twitter logo"></a></li>
+            <li><a class="media-link foot"
+                    href="https://www.linkedin.com/in/math%C3%ADas-wismann-bertolucci-8812a4194/"><img
+                        src="icon-img/linkedin-icon.svg" alt="linked-in logo"></a></li>
+            <li><a class="media-link foot" href="https://medium.com/"><img src="icon-img/medium.svg"
+                        alt="medium logo"></a></li>
+            <li><a class="media-link foot" href="https://github.com/mwismann"><img src="icon-img/github.svg"
+                        alt="github logo"></a></li>
+            <li><a class="media-link foot" href="https://angel.co/"><img src="icon-img/angellist.svg"
+                        alt="angellist logo"></a>
+            </li>
+        </ul>
+    </footer>
 </body>
 
 </html>
