Fix linter errors

--- a/index.html
+++ b/index.html
@@ -247,17 +247,17 @@
 
     <!-- Footer -->
     <footer>
-        <ul>
-            <li><a class="media-link foot" href="https://twitter.com/mathias_wismann"><img src="icon-img/twitter.svg"
+        <ul id="footer-list">
+            <li><a class="media-link" href="https://twitter.com/mathias_wismann"><img class="footer-img" src="icon-img/twitter.svg"
                         alt="twitter logo"></a></li>
-            <li><a class="media-link foot"
-                    href="https://www.linkedin.com/in/math%C3%ADas-wismann-bertolucci-8812a4194/"><img
+            <li><a class="media-link"
+                    href="https://www.linkedin.com/in/math%C3%ADas-wismann-bertolucci-8812a4194/"><img class="footer-img"
                         src="icon-img/linkedin-icon.svg" alt="linked-in logo"></a></li>
-            <li><a class="media-link foot" href="https://medium.com/"><img src="icon-img/medium.svg"
+            <li><a class="media-link" href="https://medium.com/"><img class="footer-img" src="icon-img/medium.svg"
                         alt="medium logo"></a></li>
-            <li><a class="media-link foot" href="https://github.com/mwismann"><img src="icon-img/github.svg"
+            <li><a class="media-link" href="https://github.com/mwismann"><img class="footer-img" src="icon-img/github.svg"
                         alt="github logo"></a></li>
-            <li><a class="media-link foot" href="https://angel.co/"><img src="icon-img/angellist.svg"
+            <li><a class="media-link" href="https://angel.co/"><img class="footer-img" src="icon-img/angellist.svg"
                         alt="angellist logo"></a>
             </li>
         </ul>
